Fix hero image alignment issue.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -141,6 +141,9 @@ main#landing > #accent {
 main#landing > #hero{
     position: absolute;
 
+    left: 50%;
+    transform: translateX(-50%);
+
     height: 70vh;
     width: auto;
     object-fit: contain;
